--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "cli-real-favicon": "^0.0.8",
     "next": "11.0.1",
+    "next-sitemap": "^1.6.148",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
