--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -13,7 +13,7 @@ jobs:
           persist-credentials: false
 
       - name: Dependencies
-        run: npx i
+        run: npm i
 
       - name: Build
         run: |
