--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "cli-real-favicon": "^0.0.8",
-    "next": "11.0.1",
+    "next": "^11.0.1",
     "next-sitemap": "^1.6.148",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.16",
+    "css-loader": "^6.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "to-string-loader": "^1.1.6",
     "typescript": "4.3.5"
   }
 }
